<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbg"

    tools:context=".UserDetails"

    >

    <ImageView
        android:id="@+id/headerPic"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:alpha="0.4"
        android:contentDescription="@string/header_bar"
        android:src="@drawable/headerbar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:fontFamily="@font/opensanssemibold"
        android:text="@string/add_users"
        android:textColor="@color/adduserscolor"
        android:textSize="18dp"
        android:layout_marginTop="25dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerPic"
        />


        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="1dp"
            android:paddingStart="1dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"

            android:fontFamily="@font/opensansregular"
            android:text="@string/name"
            android:textColor="@color/color1tv"
            android:textSize="10dp"

            android:layout_marginStart="19dp"
            android:layout_marginTop="70dp"

            app:layout_constraintTop_toBottomOf="@id/headerPic"
            app:layout_constraintStart_toStartOf="@+id/headerPic"


            />

        <EditText
            android:id="@+id/etname"
            android:layout_width="325dp"

            android:layout_height="40dp"
            android:height="22dp"

            android:hint="Enter Name Here..."
            android:inputType="text"
            android:paddingStart="2dp"
            android:paddingBottom="2dp"
            android:textColor="@color/adduserscolor"
            android:textSize="16dp"

            app:layout_constraintTop_toBottomOf="@id/tvname"
            app:layout_constraintStart_toStartOf="@+id/tvname"



            />


        <TextView
            android:id="@+id/tvcollege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/opensansregular"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"

            android:text="@string/college_name"
            android:textColor="@color/color1tv"
            android:textSize="8dp"

            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@id/etname"
            app:layout_constraintStart_toStartOf="@+id/etname"


            />


        <EditText
            android:id="@+id/etclgname"
            android:layout_width="325dp"

            android:layout_height="40dp"
            android:height="22dp"
            android:hint="@string/enter_clg_name_here"
            android:inputType="text"
            android:padding="1dp"
            android:textColor="@color/adduserscolor"
            android:textSize="16dp"

            app:layout_constraintTop_toBottomOf="@id/tvcollege"
            app:layout_constraintStart_toStartOf="@+id/tvcollege"


            />

    <TextView
        android:id="@+id/tvgender"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginTop="6.05dp"
        android:fontFamily="@font/opensansregular"

        android:paddingStart="3dp"
        android:paddingEnd="3dp"


        android:text="@string/gender"
        android:textColor="@color/color1tv"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/etclgname"
        app:layout_constraintTop_toBottomOf="@id/etclgname"

        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearradio"
        android:layout_width="match_parent"
        android:layout_height="25dp"

        android:layout_marginStart="26.81dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="7dp"
        android:paddingStart="2dp"

        android:paddingTop="1dp"
        android:paddingBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/tvgender"

        >

        <TextView
            android:id="@+id/tvmale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/opensansregular"

            android:padding="1dp"

            android:text="@string/male"
            android:textColor="@color/color2wr"
            android:textSize="12dp"

            />

        <TextView
            android:id="@+id/radiomale"
            android:layout_width="17dp"
            android:layout_height="17dp"

            android:layout_marginStart="20.22dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/radiobutton"

            android:padding="2dp"


            app:layout_constraintStart_toEndOf="@id/tvmale"


            />

        <TextView
            android:id="@+id/tvfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31.2dp"

            android:fontFamily="@font/opensansregular"
            android:padding="1dp"

            android:text="@string/female"

            android:textColor="@color/color2wr"
            android:textSize="12dp"

            />

        <TextView
            android:id="@+id/radiofemale"
            android:layout_width="17dp"

            android:layout_height="17dp"
            android:layout_marginStart="20.22dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/radiobutton"
            android:padding="2dp"


            />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/tvbtech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensansregular"
        android:paddingStart="2dp"
        android:paddingTop="1dp"

        android:paddingBottom="1dp"
        android:text="@string/btech"
        android:textColor="@color/color1tv"
        android:textSize="10dp"


        app:layout_constraintStart_toStartOf="@id/linearradio"
        app:layout_constraintTop_toBottomOf="@id/linearradio"
        tools:layout_editor_absoluteX="27dp"

        />


    <EditText
        android:id="@+id/etbtechpass"
        android:layout_width="325dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:autofillHints="year"
        android:fontFamily="@font/opensansregular"
        android:hint="year"
        android:inputType="none"
        android:textColor="@color/color2wr"
        android:textSize="16dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/tvbtech"
        app:layout_constraintTop_toBottomOf="@+id/tvbtech"
        tools:ignore="SpUsage,TextFields,TouchTargetSizeCheck,TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/tvdob"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/opensansregular"
        android:paddingStart="2dp"
        android:paddingTop="5dp"

        android:paddingEnd="2dp"
        android:paddingBottom="1dp"
        android:text="@string/dob"
        android:textColor="@color/color1tv"

        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/etbtechpass"
        app:layout_constraintTop_toBottomOf="@id/etbtechpass"
        app:layout_editor_absoluteX="26.81dp"

        />


    <TextView
        android:id="@+id/tvselectdobdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="3dp"

        android:fontFamily="@font/opensansregular"
        android:paddingStart="2dp"
        android:paddingTop="2dp"

        android:paddingEnd="2dp"
        android:text="@string/dobDate"


        android:textColor="@color/color2wr"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@id/tvdob"
        app:layout_constraintTop_toBottomOf="@id/tvdob"

        />


    <Button
        android:id="@+id/btndob"
        android:layout_width="18.41dp"
        android:layout_height="20dp"

        android:layout_marginStart="300dp"
        android:layout_marginTop="3dp"

        android:background="@drawable/dobimg"
        android:contentDescription="@string/dob_image"
        android:padding="2dp"


        app:layout_constraintStart_toStartOf="@id/tvdob"


        app:layout_constraintTop_toBottomOf="@id/tvdob"

        />

    <EditText
        android:id="@+id/etdob"
        android:layout_width="325dp"

        android:layout_height="40dp"
        android:height="22dp"

        android:alpha="0.5"
        android:editable="false"
        android:inputType="none"

        android:paddingStart="2dp"
        android:paddingBottom="2dp"

        android:textColor="@color/color2wr"
        android:textSize="16dp"

        app:layout_constraintStart_toStartOf="@id/tvdob"
        app:layout_constraintTop_toBottomOf="@id/tvdob"


        />


    <TextView
        android:id="@+id/tvdateandtime"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginTop="23dp"

        android:fontFamily="@font/opensansregular"

        android:padding="2dp"
        android:text="@string/dobTime"

        android:textColor="@color/color1tv"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/tvselectdobdate"
        app:layout_constraintTop_toBottomOf="@id/tvselectdobdate" />


    <TextView
        android:id="@+id/tvselectdatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="3dp"

        android:fontFamily="@font/opensansregular"


        android:padding="3dp"
        android:text="@string/selectdatetime"


        android:textColor="@color/color2wr"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@id/tvdateandtime"
        app:layout_constraintTop_toBottomOf="@id/tvdateandtime"

        />

    <Button
        android:id="@+id/btndatetime"
        android:layout_width="18.41dp"
        android:layout_height="20dp"

        android:layout_marginTop="50dp"

        android:background="@drawable/dobimg"
        android:contentDescription="@string/date_and_time"
        android:paddingTop="2dp"


        app:layout_constraintStart_toStartOf="@id/btndob"
        app:layout_constraintTop_toBottomOf="@id/btndob"

        />

    <EditText
        android:id="@+id/etdatetime"
        android:layout_width="325dp"

        android:layout_height="40dp"
        android:height="22dp"

        android:alpha="0.5"
        android:editable="false"
        android:inputType="none"

        android:paddingStart="2dp"
        android:paddingBottom="2dp"
        android:textColor="@color/adduserscolor"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@id/tvdateandtime"
        app:layout_constraintTop_toBottomOf="@id/tvdateandtime"


        />


    <TextView
        android:id="@+id/tvhowuratestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensansregular"

        android:padding="3dp"
        android:text="@string/howdourate"

        android:textColor="@color/color1tv"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/tvselectdatetime"
        app:layout_constraintTop_toBottomOf="@id/tvselectdatetime"

        />

    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:numStars="5"
        android:progressTint="@color/fillingstar"

        android:rating="0"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:stepSize="1"

        android:transformPivotX="5dp"
        android:transformPivotY="5dp"

        app:layout_constraintStart_toStartOf="@id/tvhowuratestar"
        app:layout_constraintTop_toBottomOf="@id/tvhowuratestar"


        />

    <TextView
        android:id="@+id/tvhowurateinonetofive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"

        android:paddingStart="3dp"
        android:paddingTop="2dp"
        android:paddingEnd="2dp"

        android:paddingBottom="2dp"
        android:text="@string/howurate"

        android:textColor="@color/color1tv"
        android:textSize="10dp"
        android:fontFamily="@font/opensansregular"

        app:layout_constraintStart_toStartOf="@id/tvhowuratestar"
        app:layout_constraintTop_toBottomOf="@id/tvhowuratestar"

        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearcheckbox"
        android:layout_width="match_parent"
        android:layout_height="27dp"

        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"

        android:padding="2dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintStart_toStartOf="@id/tvhowurateinonetofive"
        app:layout_constraintTop_toBottomOf="@id/tvhowurateinonetofive"

        >

        <TextView
            android:id="@+id/radio1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/checkboxesnormal"

            />

        <TextView
            android:id="@+id/tvcheckboxone"
            android:layout_width="7dp"
            android:layout_height="17dp"

            android:layout_marginStart="16dp"
            android:fontFamily="@font/opensansregular"
            android:padding="1dp"

            android:paddingBottom="2dp"
            android:text="@string/_1"
            android:textColor="@color/adduserscolor"
            android:textSize="12dp"


            />


        <TextView
            android:id="@+id/radio2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="17dp"

            android:background="@drawable/checkboxesnormal"

            />

        <TextView
            android:id="@+id/tvcheckboxtwo"
            android:layout_width="7dp"

            android:layout_height="17dp"

            android:layout_marginStart="16.81dp"

            android:fontFamily="@font/opensansregular"
            android:text="@string/_2"
            android:textColor="@color/adduserscolor"
            android:textSize="12dp"


            />


        <TextView
            android:id="@+id/radio3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="17dp"
            android:background="@drawable/checkboxesnormal"

            />

        <TextView
            android:id="@+id/tvcheckboxthree"
            android:layout_width="7dp"

            android:layout_height="17dp"

            android:layout_marginStart="17dp"

            android:fontFamily="@font/opensansregular"
            android:text="@string/_3"
            android:textColor="@color/adduserscolor"
            android:textSize="12dp"

            />


        <TextView
            android:id="@+id/radio4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="17dp"
            android:background="@drawable/checkboxesnormal" />

        <TextView
            android:id="@+id/tvcheckboxtextfour"
            android:layout_width="7dp"

            android:layout_height="17dp"

            android:layout_marginStart="16dp"

            android:fontFamily="@font/opensansregular"
            android:text="@string/_4"
            android:textColor="@color/adduserscolor"
            android:textSize="12dp"


            />

        <TextView
            android:id="@+id/radio5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="17dp"
            android:background="@drawable/checkboxesnormal"

            />

        <TextView
            android:id="@+id/tvcheckboxtextfive"
            android:layout_width="7dp"

            android:layout_height="17dp"

            android:layout_marginStart="16dp"


            android:fontFamily="@font/opensansregular"
            android:text="@string/_5"
            android:textColor="@color/adduserscolor"
            android:textSize="12dp"


            />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="100dp"

        android:background="@drawable/btnshape"
        android:text="@string/save"

        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/linearcheckbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>