<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mainbg"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/headerPic"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:alpha="0.4"
            android:contentDescription="@string/header_bar"
            android:src="@drawable/headerbar"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


            <TextView
                android:id="@+id/users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"

                android:fontFamily="@font/opensanssemibold"
                android:text="@string/users"
                android:textColor="@color/adduserscolor"
                android:textSize="18dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerPic"
                />

            <TextView
                android:id="@+id/tvedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="25dp"
                android:layout_marginStart="70dp"

                android:fontFamily="@font/opensansregular"

                android:padding="2dp"
                android:text="@string/edit"
                android:textColor="@color/color2wr"
                android:textSize="15dp"

                app:layout_constraintStart_toEndOf="@id/users"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerPic"

                />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rview1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/users"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <androidx.appcompat.widget.AppCompatImageButton

        android:id="@+id/imgbtnext"
        android:layout_width="51dp"
        android:layout_height="51dp"

        android:layout_marginTop="580dp"
        android:background="@drawable/addusersshape"
        android:contentDescription="@string/new_user_registration_button"

        android:padding="20dp"

        app:layout_constraintTop_toBottomOf="@id/users"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>